sorted the bug on small scrren display

--- a/styles.css
+++ b/styles.css
@@ -243,6 +243,9 @@ color: white;
   i{
     color: white;
   }
+  .hide{
+    display:none;
+  }
 @media (max-width:800px){
     html{
 margin: 10px;
@@ -264,6 +267,9 @@ font-size: 10px;
         width: 80vw;
         margin: auto;
         
+    }
+    .hide{
+        display: inline;
     }
     .about-us:nth-child(2){
         margin-top: 10px;
@@ -325,3 +331,4 @@ font-size: 10px;
         justify-content: center;
         margin-top: 20px;
     }
+}
